# KHPCG3.0

./: CMakeLists.txt  README  README.md  compile_commands.json
src/: CG.cpp  CMakeLists.txt  ColorReorder.cpp  ColorSYMGS.cpp  Coloring.cpp  ComputeMG.cpp  ComputeResidual.cpp  ComputeWAXPBY.cpp  KokkosSetup.hpp  LevelSYMGS.cpp  LevelScheduler.cpp
